# Tian-Ji

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  SKELETON.md  current_issues.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
crates/tianji-agent/: Cargo.toml
crates/tianji-agent/src/: approval.rs  assembler.rs  lib.rs  mcp.rs  runner.rs  skills.rs  summary.rs
crates/tianji-llm/: Cargo.toml
crates/tianji-llm/src/: claude.rs  deepseek.rs  lib.rs  ollama.rs
crates/tianji-policy/: Cargo.toml
crates/tianji-policy/src/: classify.rs  lib.rs  rules.rs  scope.rs  targets.rs
crates/tianji-pty/: Cargo.toml
crates/tianji-pty/src/: lib.rs
crates/tianji-store/: Cargo.toml
crates/tianji-store/src/: lib.rs  schema.rs
crates/tianji-types/: Cargo.toml
crates/tianji-types/src/: event.rs  ids.rs  lib.rs  llm.rs  policy.rs  scope.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: set_api_key.rs
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  main.rs  oauth.rs  secrets.rs  state.rs
src-tauri/src/commands/: agent.rs  auth.rs  mod.rs  notes.rs  policy.rs  query.rs  settings.rs  terminal.rs  workspace.rs
src/components/: Modal.tsx  Select.tsx  SettingsButton.tsx
src/components/agent/: AgentChat.tsx  ApprovalCard.tsx
src/components/layout/: AppShell.tsx  PhaseTimeline.tsx  WorkspaceRail.tsx
src/components/notes/: NotesEditorModal.tsx  NotesPanel.tsx  ReportModal.tsx
src/components/policy/: PolicyRulesModal.tsx
src/components/terminals/: TerminalGrid.tsx
src/lib/: backend.ts  events.ts  ipc.ts  types.ts
src/state/: stores.ts
