[package]
name = "tianji"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tiān Jī — LLM-orchestrated pentesting framework"
default-run = "tianji"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tianji-types = { workspace = true }
tianji-policy = { workspace = true }
tianji-store = { workspace = true }
tianji-pty = { workspace = true }
tianji-llm = { workspace = true }
tianji-agent = { workspace = true }

tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# keyring 3.x needs an explicit per-platform backend feature.
keyring = { version = "3" }

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Tokio runtime + Rust crypto (no OpenSSL dep); talks to GNOME Keyring / KDE Wallet over D-Bus.
keyring = { version = "3", features = ["linux-secret-service-rt-tokio-crypto-rust"] }

[features]
# Tauri custom-protocol for production builds.
custom-protocol = ["tauri/custom-protocol"]
