[package]
name = "tianji-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tianji-types = { workspace = true }
tianji-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
